@@ -49,7 +49,7 @@ bool LockCommand::Execute()
 		{
 			CSVNProgressDlg progDlg;
 			progDlg.SetCommand(CSVNProgressDlg::SVNProgress_Lock);
-			progDlg.SetOptions(lockDlg.m_bStealLocks ? ProgOptLockForce : ProgOptNone);
+			progDlg.SetOptions(lockDlg.m_bStealLocks ? ProgOptForce : ProgOptNone);
 			progDlg.SetPathList(lockDlg.m_pathList);
 			progDlg.SetCommitMessage(lockDlg.m_sLockMessage);
 			if (parser.HasVal(_T("closeonend")))
